[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`openbd` is a package for openBD( https://openbd.jp/ )."
homepage = "https://github.com/SaitoTsutomu/openbd"
license = "Apache-2.0"
name = "openbd"
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
openbd = "openbd:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.8"
flake8 = "^5.0"
isort = "^5.10"
jupyterlab = "^3.4"
mypy = "^0.971"
pytest = "^7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers", # マーカースペルミス対応
  "--strict-config", # 設定ミス対応
  "-ra", # サマリー表示
  "-v", # 詳細表示
  "-x", # 失敗時に終了
  "--capture=no", # 標準出力表示
]

testpaths = "tests"
