[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`openbd` is a package for openBD( https://openbd.jp/ )."
homepage = "https://github.com/SaitoTsutomu/openbd"
license = "Apache-2.0"
name = "openbd"
readme = "README.md"
version = "0.2.1"

[tool.poetry.scripts]
openbd = "openbd:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
flake8 = "^6.1"
isort = "^5.12"
jupyterlab = "^4.0"
mypy = "^1.5"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers", # マーカースペルミス対応
  "--strict-config", # 設定ミス対応
  "-ra", # サマリー表示
  "-v", # 詳細表示
  "-x", # 失敗時に終了
  "--capture=no", # 標準出力表示
]

testpaths = "tests"
